# marcys

./: Cargo.toml  README.md
src/: cpu.rs  main.rs
src/machine/: cpu.rs  memory.rs
